--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-google-generativeai>=0.4.0
-python-dotenv>=1.0.0
 pydub>=0.25.1
-numpy>=1.24.0 
+google-generativeai>=0.3.0
+numpy>=1.24.0
+pyinstaller>=6.0.0 
